# FireParrot

./: .gitignore  .gitmodules  CMakeLists.txt  Common.h  DeviceManager.cpp  DeviceManager.h  Doxyfile  Drone.cpp  Drone.h  DroneConfig.h  DroneConfig.h.in  DummyDevice.cpp  DummyDevice.h  GLRenderFrame.cpp  GLRenderFrame.h  InputDevice.cpp  InputDevice.h  README.experimental  README.md  XBoxDevice.cpp  XBoxDevice.h  main.cpp  readme
DroneLib/: ARDrone.cpp  ARDrone.h
documentation/: drone_uml.xmi
dronelib/: ARDrone.cpp  ARDrone.h  CMakeLists.txt
gamepad/: CMakeLists.txt
include/: Common.h  DeviceManager.h  Drone.h  DroneConfig.h  DroneConfig.h.in  GLRenderFrame.h  MouseAndKeyboard.h  XBoxDevice.h
input/: DummyDevice.cpp  DummyDevice.h  InputDevice.h
src/: Drone.cpp  DroneControlTest.cpp  GLRenderFrame.cpp  XBoxDevice.cpp
